crates/mun_codegen/src/snapshots/test__assignment_op_float.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn assign(a: float, b: float) -> float {\n    a = b;\n    a\n}\npub fn assign_add(a: float, b: float) -> float {\n    a += b;\n    a\n}\npub fn assign_subtract(a: float, b: float) -> float {\n    a -= b;\n    a\n}\npub fn assign_multiply(a: float, b: float) -> float {\n    a *= b;\n    a\n}\npub fn assign_divide(a: float, b: float) -> float {\n    a /= b;\n    a\n}\npub fn assign_remainder(a: float, b: float) -> float {\n    a %= b;\n    a\n}"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@global_type_table = external global [1 x %struct.MunTypeInfo addrspace(4)*]

define double @assign(double, double) {
body:
  ret double %1
}

define double @assign_add(double, double) {
body:
  %add = fadd double %0, %1
  ret double %add
}

define double @assign_subtract(double, double) {
body:
  %sub = fsub double %0, %1
  ret double %sub
}

define double @assign_multiply(double, double) {
body:
  %mul = fmul double %0, %1
  ret double %mul
}

define double @assign_divide(double, double) {
body:
  %div = fdiv double %0, %1
  ret double %div
}

define double @assign_remainder(double, double) {
body:
  %rem = frem double %0, %1
  ret double %rem
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@"type_info::<core::f64>::name" = private unnamed_addr constant [10 x i8] c"core::f64\00"
@"type_info::<core::f64>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"`\DBF\9C?YJ%G\AD4\9F\D5\92%A", [10 x i8]* @"type_info::<core::f64>::name", i32 64, i8 8, i8 0 }
@global_type_table = global [1 x %struct.MunTypeInfo addrspace(4)*] [%struct.MunTypeInfo addrspace(4)* @"type_info::<core::f64>"]

