crates/mun_codegen/src/snapshots/test__assignment_op_u128.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn assign(a: u128, b: u128) -> u128 {\n    a = b;\n    a\n}\npub fn assign_add(a: u128, b: u128) -> u128 {\n    a += b;\n    a\n}\npub fn assign_subtract(a: u128, b: u128) -> u128 {\n    a -= b;\n    a\n}\npub fn assign_multiply(a: u128, b: u128) -> u128 {\n    a *= b;\n    a\n}\npub fn assign_divide(a: u128, b: u128) -> u128 {\n    a /= b;\n    a\n}\npub fn assign_remainder(a: u128, b: u128) -> u128 {\n    a %= b;\n    a\n}"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@global_type_table = external global [1 x %struct.MunTypeInfo addrspace(4)*]

define i128 @assign(i128, i128) {
body:
  ret i128 %1
}

define i128 @assign_add(i128, i128) {
body:
  %add = add i128 %0, %1
  ret i128 %add
}

define i128 @assign_subtract(i128, i128) {
body:
  %sub = sub i128 %0, %1
  ret i128 %sub
}

define i128 @assign_multiply(i128, i128) {
body:
  %mul = mul i128 %0, %1
  ret i128 %mul
}

define i128 @assign_divide(i128, i128) {
body:
  %div = udiv i128 %0, %1
  ret i128 %div
}

define i128 @assign_remainder(i128, i128) {
body:
  %rem = urem i128 %0, %1
  ret i128 %rem
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@"type_info::<core::u128>::name" = private unnamed_addr constant [11 x i8] c"core::u128\00"
@"type_info::<core::u128>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"\E67\1BU\E9k\95\93d\14}\1C\96S\95\F0", [11 x i8]* @"type_info::<core::u128>::name", i32 128, i8 8, i8 0 }
@global_type_table = global [1 x %struct.MunTypeInfo addrspace(4)*] [%struct.MunTypeInfo addrspace(4)* @"type_info::<core::u128>"]

